# mkdocs-live-wysiwyg-plugin

./: .gitignore  ADMONITION-CSS-ANALYSIS.md  CONTRIBUTING.md  LICENSE  PLUGIN_CONFIG.md  README.md  RELEASE.md  mkdocs.yml  pyproject.toml  techdocs-preview.sh
.cursor/rules/: api-server.mdc  application-storage.mdc  browser-compatibility.mdc  build-mkdocs-live-wysiwyg-site.mdc  cardinal-rules.mdc  caution-resolve-scoping.mdc  chrome-location-restrictions.mdc  cli-utility.mdc  content-history.mdc  content-refactoring.mdc  content-scanning.mdc  cursor-selection-preservation.mdc  dialog-ux.mdc  do-not-manage-git-index.mdc  dual-mkdocs-yml-write.mdc  editor-width-alignment.mdc  enter-bubble-navigation.mdc  file-page-management.mdc  focus-mode.mdc  focus-nav-menu.mdc  help-reference-updates.mdc  image-insertion-resize.mdc  keyboard.mdc  layout.mdc  markdown-awareness.mdc  mermaid-mode.mdc  mkdocs-yml.mdc  modes-of-operation.mdc  nav-migration.mdc  nav-rendering-authority.mdc  progressive-select-all.mdc  readonly-mode.mdc  run-shell-commands-with-bash-wrapper.mdc  save-pipeline.mdc  scope-edits-to-plugin.mdc  snapshot-diff.mdc  table-of-contents.mdc  targeted-markdown-revert.mdc  text-selection-architecture.mdc  theme-detection.mdc  (+5 more)
.github/: download-utilities.yml  pip-packages-dev.txt  pip-packages.txt  update-dependencies.sh
.github/workflows/: ci.yml  publish.yml  release.yml  vsix-release.yml
docs/: KEYBOARD-SHORTCUTS.md  diff-quirks.md  index.md  options.md  shortcuts.md
example-docs/: mkdocs.yml
mkdocs_live_wysiwyg_plugin/: __init__.py  admonition.css  api_server.py  browser-compat.js  help-reference.md  link_check_server.py  live-wysiwyg-integration.js  mkdocs-admonition-extension.js  plugin.py
scripts/: patch-mermaid-vendor.py  vendor-mermaid.sh
vsx-src/: .gitignore  .vscodeignore  Dockerfile  Makefile  esbuild.mjs  package-lock.json  package.json  tsconfig.json
vsx-src/src/: auto-docs.ts  (+12 more)
(+64 files in other folders)
